syntax = "proto3";

package berty.p2p;

import "api/protobuf/graphql/graphql.proto";
import "gogoproto/gogo.proto";

option go_package = "berty.tech/core/api/p2p";

enum MetricsType {
  // peer monitor a specific peer
  PEER = 0;

  // protocol monitor a specific protocol
  PROTOCOL = 1;

  // global monitor a metric globally
  GLOBAL = 2;
}

message BandwidthStats {
  string id = 1 [(gql.graphql_nullable) = true, (gogoproto.customname) = "ID"];
  int64 total_in  = 2 [(gql.graphql_nullable) = true];
  int64 total_out  = 3 [(gql.graphql_nullable) = true];
  double rate_in  = 4 [(gql.graphql_nullable) = true];
  double rate_out  = 5 [(gql.graphql_nullable) = true];
  MetricsType type = 6;
}
